--- a/ChineseChess/ChineseChess.vcxproj.filters
+++ b/ChineseChess/ChineseChess.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="CChessBase.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CChessEngineAdapter.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CChessEngineCore.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ChineseChess.cpp">
@@ -78,6 +84,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CChessBase.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CChessEngineAdapter.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CChessEngineCore.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
