--- a/ChineseChess/ChineseChess.vcxproj
+++ b/ChineseChess/ChineseChess.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="framework_base.h" />
     <ClInclude Include="framework_pages.h" />
+    <ClInclude Include="LocalPVP.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="settings.h" />
     <ClInclude Include="targetver.h" />
@@ -173,6 +174,7 @@
     <ClCompile Include="framework_base.cpp" />
     <ClCompile Include="framework_pages.cpp" />
     <ClCompile Include="IO_thread.cpp" />
+    <ClCompile Include="LocalPVP.cpp" />
     <ClCompile Include="settings.cpp" />
     <ClCompile Include="thread_communicate.cpp" />
   </ItemGroup>
