--- a/ChineseChess/ChineseChess.vcxproj.filters
+++ b/ChineseChess/ChineseChess.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClInclude Include="Resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="ChineseChess.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="audio_thread.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -42,26 +39,29 @@
     <ClInclude Include="framework_pages.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="CChessUI.h">
+    <ClInclude Include="cchess\CChessBase.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="CChessBase.h">
+    <ClInclude Include="cchess\CChessEngineAdapter.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="CChessEngineAdapter.h">
+    <ClInclude Include="cchess\CChessEngineCore.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="CChessEngineCore.h">
+    <ClInclude Include="cchess\CChessUI.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="LocalPVP.h">
+    <ClInclude Include="cchess\ChineseChess.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="cchess\LocalPVE.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="cchess\LocalPVP.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ChineseChess.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="AppMain.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -83,19 +83,22 @@
     <ClCompile Include="framework_pages.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="CChessUI.cpp">
+    <ClCompile Include="cchess\CChessEngineCore.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="CChessBase.cpp">
+    <ClCompile Include="cchess\CChessUI.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="CChessEngineAdapter.cpp">
+    <ClCompile Include="cchess\ChineseChess.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="CChessEngineCore.cpp">
+    <ClCompile Include="cchess\LocalPVE.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="LocalPVP.cpp">
+    <ClCompile Include="cchess\LocalPVP.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="cchess\CChessEngineAdapter.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -111,8 +114,5 @@
     <Image Include="ChineseChess.ico">
       <Filter>资源文件</Filter>
     </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
