--- a/ChineseChess/ChineseChess.vcxproj
+++ b/ChineseChess/ChineseChess.vcxproj
@@ -73,13 +73,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <EnableClangTidyCodeAnalysis>false</EnableClangTidyCodeAnalysis>
-    <ExternalIncludePath>..\Dependencies\boost_1_72_0;..\Dependencies;..\Dependencies\openssl;..\Dependencies\libogg-1.3.5\include;..\Dependencies\libvorbis-1.3.7\include;..\Dependencies\openal\include;$(ExternalIncludePath)</ExternalIncludePath>
+    <ExternalIncludePath>..\Dependencies\boost_1_72_0;..\Dependencies;..\Dependencies\openssl;..\Dependencies\libogg-1.3.5\include;..\Dependencies\libvorbis-1.3.7\include;..\Dependencies\openal\include;.\;.\cchess;$(ExternalIncludePath)</ExternalIncludePath>
     <LibraryPath>..\Dependencies\boost_1_72_0\lib64-msvc-14.2;..\Dependencies\boost_1_88_0;..\Dependencies;..\Dependencies\openal\libs\Win64;..\Dependencies\libogg-1.3.5\win32\VS2015\x64\Release;..\Dependencies\libvorbis-1.3.7\win32\VS2010\x64\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <EnableClangTidyCodeAnalysis>false</EnableClangTidyCodeAnalysis>
-    <ExternalIncludePath>..\Dependencies\boost_1_72_0;..\Dependencies;..\Dependencies\openssl;..\Dependencies\libogg-1.3.5\include;..\Dependencies\libvorbis-1.3.7\include;..\Dependencies\openal\include;$(ExternalIncludePath)</ExternalIncludePath>
+    <ExternalIncludePath>..\Dependencies\boost_1_72_0;..\Dependencies;..\Dependencies\openssl;..\Dependencies\libogg-1.3.5\include;..\Dependencies\libvorbis-1.3.7\include;..\Dependencies\openal\include;.\;.\cchess;$(ExternalIncludePath)</ExternalIncludePath>
     <LibraryPath>..\Dependencies\boost_1_72_0\lib64-msvc-14.2;..\Dependencies;..\Dependencies\openal\libs\Win64;..\Dependencies\libogg-1.3.5\win32\VS2015\x64\Release;..\Dependencies\libvorbis-1.3.7\win32\VS2010\x64\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -155,9 +155,10 @@
     <ClInclude Include="cchess\CChessEngineAdapter.h" />
     <ClInclude Include="cchess\CChessEngineCore.h" />
     <ClInclude Include="cchess\CChessUI.h" />
-    <ClInclude Include="cchess\ChineseChess.h" />
     <ClInclude Include="cchess\LocalPVE.h" />
     <ClInclude Include="cchess\LocalPVP.h" />
+    <ClInclude Include="cchess\pages\ChineseChess.h" />
+    <ClInclude Include="cchess\pages\ChineseChessPVE.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="framework_base.h" />
     <ClInclude Include="framework_pages.h" />
@@ -172,9 +173,10 @@
     <ClCompile Include="cchess\CChessEngineAdapter.cpp" />
     <ClCompile Include="cchess\CChessEngineCore.cpp" />
     <ClCompile Include="cchess\CChessUI.cpp" />
-    <ClCompile Include="cchess\ChineseChess.cpp" />
     <ClCompile Include="cchess\LocalPVE.cpp" />
     <ClCompile Include="cchess\LocalPVP.cpp" />
+    <ClCompile Include="cchess\pages\ChineseChess.cpp" />
+    <ClCompile Include="cchess\pages\ChineseChessPVE.cpp" />
     <ClCompile Include="framework_base.cpp" />
     <ClCompile Include="framework_pages.cpp" />
     <ClCompile Include="IO_thread.cpp" />
