--- a/ChineseChess/ChineseChess.vcxproj.filters
+++ b/ChineseChess/ChineseChess.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="cchess\pages\ChineseChessPVE.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="cchess\CChessUIPVE.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AppMain.cpp">
@@ -105,6 +108,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="cchess\pages\ChineseChessPVE.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="cchess\CChessUIPVE.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
